--- a/JobSearcher/JobSearcher.csproj
+++ b/JobSearcher/JobSearcher.csproj
@@ -13,6 +13,8 @@
         <PackageReference Include="Hangfire.Core" Version="1.8.0-beta4" />
         <PackageReference Include="Hangfire.SqlServer" Version="1.8.0-beta4" />
         <PackageReference Include="Mapster" Version="7.4.0-pre02" />
+        <PackageReference Include="MediatR" Version="10.0.1" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
           <PrivateAssets>all</PrivateAssets>
